# finite-Weil

./: README.md  pyproject.toml
docs/: FALSIFICATION_PROTOCOL.md  FOURIER_CONVENTION.md  NORMALIZATION.md  PHASE2_EXPLORATORY_RUN_PLAN.md  PHASE2_MANIFEST_TEMPLATE.json  RESEARCH_MAP.md
experiments/: __init__.py  compare_regularizations.py  convergence.py  deep_cutoff.py  geometry_refinement.py  plot_convergence.py  run.py
finite_weil/: __init__.py  completed.py  explicit_formula.py  gamma.py  gram.py  lfunctions.py  operators.py  packets.py  weil_operator.py
paper/: 00_foundations.md  01_infinite_weil_operator.md  02_convergence_theory.md  03_spectral_program.md  06_gamma_term.md  07_prime_operator.md  08_regularized_prime_experiment.md  09_prime_cutoff_geometry.md  10_minimizer_reconstruction.md  11_variational_foundation.md  12_pole_term.md  12_quadratic_form.md  13_reflection_commutant_theorem.md  13_reflection_structure.md  13_reflection_symmetry.md  14_translation_span_theorem.md  15_symmetric_toeplitz_commutant.md  16_finite_gaussian_translation_algebra.md  17_two_shift_generation.md  completed_dirichlet_normalization.md  conductor_matrix.md  exceptional-widths.md  fixed-shift-generation.md  flat-limit-coefficient.md  frame-schur-proof.md  full-translation-family.md  graded-orthogonality-proof.md  oscillation-chain-lemma.md  shell-fourier-factorization.md
scripts/: certify_two_shift_rank.py  two_shift_rank_certificate.py
tests/: test_completed.py  test_deep_prime_cutoff.py  test_experiments.py  test_explicit_formula.py  test_gamma.py  test_gram.py  (+7 more)
(+9 files in other folders)
